# gitcache

./: .coveragerc-combined  .coveragerc-functional  .coveragerc-functional-linux  .coveragerc-functional-windows  .coveragerc-unittests-linux  .coveragerc-unittests-windows  .gitignore  .gitmodules  .pycodestyle  .pylintrc  CHANGELOG.md  LICENSE  Makefile  README.md  Vagrantfile.win  dev_requirements.in  dev_requirements.txt  gitcache  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
build_in_docker/: pip-deps-upgrade.sh  ubuntu.sh  ubuntu_latest_git.sh
git_cache/: __init__.py  command_execution.py  command_execution_unix.py  command_execution_win.py  config.py  database.py  git_cache_command.py  git_command.py  git_mirror.py  git_options.py  global_settings.py
pip_deps/: dev_requirements-darwin-py3.12.3.txt  dev_requirements-darwin-py3.12.4.txt  dev_requirements-darwin-py3.13.0.txt  dev_requirements-darwin-py3.13.1.txt  dev_requirements-darwin-py3.13.3.txt  dev_requirements-darwin-py3.13.5.txt  dev_requirements-darwin-py3.13.7.txt  dev_requirements-darwin-py3.14.2.txt  dev_requirements-darwin-py3.14.3.txt  dev_requirements-darwin-py3.14.4.txt  dev_requirements-darwin-py3.14.5.txt  dev_requirements-darwin-py3.14.6.txt  dev_requirements-linux-py3.10.12.txt  dev_requirements-linux-py3.10.6.txt  dev_requirements-linux-py3.11.2.txt  dev_requirements-linux-py3.12.10.txt  dev_requirements-linux-py3.12.3.txt  dev_requirements-linux-py3.12.7.txt  dev_requirements-linux-py3.14.4.txt  dev_requirements-linux-py3.8.0.txt  dev_requirements-linux-py3.8.10.txt  dev_requirements-linux-py3.8.16.txt  dev_requirements-win32-py3.11.0.txt  dev_requirements-win32-py3.11.6.txt  dev_requirements-win32-py3.11.9.txt  dev_requirements-win32-py3.12.0.txt  requirements-darwin-py3.12.4.txt  requirements-darwin-py3.13.1.txt  requirements-darwin-py3.13.5.txt  requirements-linux-py3.10.12.txt  requirements-linux-py3.10.6.txt  requirements-linux-py3.12.3.txt  requirements-linux-py3.8.0.txt  requirements-linux-py3.8.10.txt  requirements-linux-py3.8.16.txt  requirements-win32-py3.11.0.txt  requirements-win32-py3.11.6.txt  (+1 more)
src/: gitcache
(+253 files in other folders)
